--- a/package.json
+++ b/package.json
@@ -10,14 +10,26 @@
     "deploy": "yarn run build && yarn run export"
   },
   "dependencies": {
+    "date-fns": "^2.14.0",
+    "gray-matter": "^4.0.2",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.6",
     "@types/react": "^16.9.35",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "standard": "^14.3.4",
     "typescript": "^3.9.3"
+  },
+  "standard": {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint/eslint-plugin"
+    ]
   }
 }
