--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "dependencies": {
     "date-fns": "^2.14.0",
     "gray-matter": "^4.0.2",
+    "highlight.js": "^10.0.3",
+    "marked": "^1.1.0",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "remark": "^12.0.0",
-    "remark-highlight.js": "^6.0.0",
-    "remark-html": "^11.0.2"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.6",
